# gtest-cmake

./: .gitignore  CMakeLists.txt  README.md  rebuild.bat  rebuild.sh
cmake/: RunGTestInBuilding.cmake
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt
src/math/include/: mymath.h
src/math/src/: mymath.cpp  mymath_test.cpp
